--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "package": {
       "name": "wordpress",
       "type": "webroot",
-      "version": "4.8.1",
+      "version": "5.2.2",
       "dist": {
         "type": "zip",
-        "url": "https://github.com/WordPress/WordPress/archive/4.8.1.zip"
+        "url": "https://github.com/WordPress/WordPress/archive/5.2.2.zip"
       },
       "require": {
         "fancyguy/webroot-installer": "1.0.0"
@@ -19,7 +19,7 @@
   }],
   "require": {
     "php": ">=5.3.0",
-    "wordpress": "4.8.1",
+    "wordpress": "^5.2.2",
     "fancyguy/webroot-installer": "1.0.0",
     "vlucas/phpdotenv": "^2.4"
   },
